# CodeCache

./: .gitattributes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  USAGE.md  project_overview.md
.claude/agents/: code-reviewer.md
.claude/briefs/: BRIEF-M1-config-storage.md  BRIEF-M10-benchmarks-release.md  BRIEF-M2-hasher.md  BRIEF-M3-parser-python.md  BRIEF-M4-chunker.md  BRIEF-M6.1-query-preprocessing.md  BRIEF-M6.2-bm25-search-dedup.md  BRIEF-M6.3-token-budget-packing.md  BRIEF-M6.4-latency-bench.md  BRIEF-M7-formatter-cli.md  BRIEF-M8-mcp-server.md  BRIEF-M9-typescript-go.md  BRIEF-R1-harness.md  BRIEF-R2.2a-bm25-weights-flag.md  BRIEF-R2.3b-stub-chunker-ab-plumbing.md  BRIEF-R2.5-external-corpus-loader.md
.github/: CLAUDE.md
.github/workflows/: bench.yml  release.yml
benches/: CLAUDE.md  hashing_bench.rs  indexing.rs
docs/: CLAUDE.md  CLAUDE_CODE_SETUP.md  ENGINEERING_PLAN.md  RESEARCH_VERIFICATION.md  REVIEW_2026-06-17.md  ROADMAP.md  TESTING_AND_USAGE.md  TEST_STRATEGY.md  TODO.md  project_plan.md
docs/plans/: M1-config-storage.md  M10-benchmarks-release.md  M6-retriever.md  M7-formatter-cli.md  M8-mcp-server.md  README.md
examples/: explain_query_plan.rs
research/: CLAUDE.md
research/r1_harness/: README.md  fetch_contextbench.py  requirements.txt  run_ab.py  run_ab_astchunk.py  run_live.py  validate_offline.py
research/r1_harness/r1harness/: ab_runner.py  arms.py  astchunk_chunker.py  chunkers.py  codecache_tool.py  corpus.py  extract.py  runner.py
research/r1_harness/tests/: test_ab_runner.py  test_astchunk_ab.py  test_astchunk_chunker.py  test_chunkers.py  test_codecache_tool.py  test_contextbench.py  (+3 more)
src/chunker/: CLAUDE.md  mod.rs
src/cli/: CLAUDE.md  mod.rs  query.rs  serve.rs
src/config/: CLAUDE.md  mod.rs
src/hasher/: CLAUDE.md  mod.rs
src/indexer/: CLAUDE.md  mod.rs  pipeline.rs
src/mcp_server/: CLAUDE.md  handlers.rs  mod.rs  tools.rs
src/parser/: CLAUDE.md  mod.rs  python.rs  typescript.rs
src/retriever/: CLAUDE.md  mod.rs
src/storage/: CLAUDE.md  mod.rs  queries.rs  schema.rs
src/types/: CLAUDE.md  mod.rs
tests/: CLAUDE.md  chunker_proptest.rs  chunker_tests.rs  cli_tests.rs  config_tests.rs  e2e_cli.rs  hasher_tests.rs  mcp_tests.rs  parser_tests.rs  parser_ts_tests.rs  retrieval_quality.rs  retriever_tests.rs  storage_tests.rs
(+19 files in other folders)
